<resources>
    <string name="app_name">HITSZ助手</string>
    <string name="app_notification_channel_id">hita_channel</string>
    <string name="app_notification_channel_name">HITSZ助手channel</string>
    <string name="drawer_open">抽屉打开</string>
    <string name="drawer_close">抽屉关闭</string>
    <string name="title_activity_import_data">ImportDataActivity</string>
    <string name="title_activity_user_center">UserCenterActivity</string>
    <string name="title_activity_subject">ActivitySubject</string>
    <string name="title_activity_gfh">ActivityGFH</string>
    <string name="title_activity_food">ActivityFood</string>
    <string name="timeline_head_free_title">今日空闲</string>
    <string name="timeline_head_free_subtitle">享受当下！</string>
    <string name="timeline_head_goodnight_title">夜深了</string>
    <string name="timeline_head_goodnight_subtitle">晚安！</string>
    <string name="timeline_head_goodmorning_title">早上好</string>
    <string name="timeline_head_lunch_title">午餐时间</string>
    <string name="timeline_head_lunch_subtitle">去哪吃?</string>
    <string name="timeline_head_dinner_title">晚餐时间</string>
    <string name="timeline_head_dinner_subtitle">去哪吃?</string>
    <string name="timeline_head_normal_title">暂时没有事件</string>
    <string name="timeline_head_normal_subtitle">自由安排</string>
    <string name="timeline_head_finish_title">全部结束</string>
    <string name="timeline_head_finish_subtitle">享受生活吧！</string>
    <string name="timeline_head_nulluser_title">请先登录</string>
    <string name="timeline_head_nulluser_subtitle">登录后享受更多服务</string>
    <string name="timeline_head_nulldata_title">无数据</string>
    <string name="timeline_head_nulldata_subtitle">请创建或导入课表</string>
    <string name="timeline_head_notthisterm_title">假期</string>
    <string name="timeline_head_notthisterm_subtitle">本学期未开始！</string>
    <string name="title_activity_user_profile">ActivityUserProfile</string>
    <string name="shortcut_empty_classroom_short">空教室</string>
    <string name="shortcut_empty_classroom_long">空教室查询</string>
    <string name="shortcut_explore_short">希塔</string>
    <string name="shortcut_explore_long">希塔HITA</string>
    <string name="shortcut_timetable_short">课表</string>
    <string name="shortcut_timetable_long">课程表</string>
    <string name="shortcut_news_short">信息窗</string>
    <string name="shortcut_news_long">信息窗口</string>
    <string name="title_activity_search">ActivitySearch</string>
    <string name="update_dialog_title">有可用更新</string>
    <string name="update_dialog_mes1">新版本</string>
    <string name="update_dialog_mes2">发布时间</string>
    <string name="button_confirm">确定</string>
    <string name="button_cancel">取消</string>
    <string name="guide_1p">欢迎使用HITSZ助手，以下为使用导航</string>
    <string name="guide_1s">您可以点击其他位置跳过导航</string>
    <string name="guide_3p">点击展开抽屉</string>
    <string name="guide_3s">功能都在这啦</string>
    <string name="guide_5p">点击进入日程表</string>
    <string name="guide_5s">加强版课程表</string>
    <string name="guide_6p">这里可以进行搜索</string>
    <string name="guide_6s">HIT全局搜...</string>
    <string name="guide_7p">登录HITSZ助手账号</string>
    <string name="guide_7s">开启精彩体验吧</string>
    <string name="notif_installQQ">请安装QQ后再反馈！</string>
    <string name="drawer_username_null">登录</string>
    <string name="drawer_signature_null">HITSZ助手账号</string>
    <string name="drawer_signature_none">无签名</string>
    <string name="main_drawer_menu_jwts">教务系统</string>
    <string name="main_drawer_menu_ut">大学城内部网</string>
    <string name="main_drawer_menu_info">校园动态</string>
    <string name="main_drawer_menu_search">搜索</string>
    <string name="main_drawer_menu_darkmode">深色模式</string>
    <string name="main_drawer_menu_settings">设置</string>
    <string name="main_drawer_menu_report">意见反馈</string>
    <string name="main_drawer_menu_about">关于</string>
    <string name="main_drawer_menu_curriculums">课表</string>
    <string name="main_drawer_menu_studyassistant">助手</string>
    <string name="main_drawer_menu_hita">希塔</string>
    <string name="main_drawer_menu_theme">主题</string>
    <string name="punch_success_normal">打卡成功</string>
    <string name="punch_success_happy">打卡成功，祝你开心每一天</string>
    <string name="punch_success_sad">打卡成功，加油呀！</string>
    <string name="load_news_failed">加载新闻失败</string>
    <string name="load_lecture_failed">加载讲座失败</string>
    <string name="load_annouce_failed">加载通知失败</string>
    <string name="punch_failed">打卡失败！</string>
    <string name="maintab_navi">校园</string>
    <string name="maintab_today">今日</string>
    <string name="maintab_events">事务</string>
    <string name="sign_up">注册</string>
    <string name="log_in">登录</string>
    <string name="navi_jw_title">教务功能</string>
    <string name="navi_jw_jw_p">掌上教务</string>
    <string name="navi_jw_jw_s">告别网页</string>
    <string name="navi_jw_emptyclassroom_s">找地方学习</string>
    <string name="navi_jw_xl_s">何时放假</string>
    <string name="navi_jw_xl_p">校历</string>
    <string name="navi_hint_text">长按卡片可以拖动调整次序哦</string>
    <string name="navi_hint_button">知道啦</string>
    <string name="navi_campus_title">校园生活</string>
    <string name="navi_campus_vote_p">态度墙</string>
    <string name="navi_campus_billboard_p">食堂排行</string>
    <string name="navi_mood_greet">Hi, 今天心情如何？</string>
    <string name="navi_mood_title">今日校园心情</string>
    <string name="navi_mood_point">分</string>
    <string name="ade_title">添加%s</string>
    <string name="ade_arrangement">日程</string>
    <string name="ade_ddl">DDL</string>
    <string name="ade_course">课程</string>
    <string name="ade_exam">考试</string>
    <string name="ade_namehint">输入事件名称...</string>
    <string name="ade_tag2">标签2</string>
    <string name="ade_tag3">标签3</string>
    <string name="ade_pick_subject">选择科目</string>
    <string name="ade_pick_time">设置日期与时间段</string>
    <string name="ade_pick_task">处理任务</string>
    <string name="ade_pick_location">选择地点</string>
    <string name="ade_wholeday">全天</string>
    <string name="add_laf_detail_hint">输入详细内容</string>
    <string name="button_post">发布</string>
    <string name="usercenter_sync_autoupload">备份所有数据到服务器</string>
    <string name="usercenter_sync_autoupload_hint">当时间表变更时，APP将自动备份数据</string>
    <string name="usercenter_sync_download">下载云端数据到本地</string>
    <string name="usercenter_sync_download_hint">这将清除本地数据，并置课表为教务课表</string>
    <string name="usercenter_info_bind">认证学号</string>
    <string name="usercenter_info_nick">昵称</string>
    <string name="usercenter_info_signature">个性签名</string>
    <string name="usercenter_info_username">账号</string>
    <string name="usercenter_info_school">学院</string>
    <string name="usercenter_info_realname">姓名</string>
    <string name="days">%d天</string>
    <string name="mood_title">校园心情指数</string>
    <string name="signup_username">设置登录账号</string>
    <string name="signup_password">密码</string>
    <string name="signup_confirm_password">确认密码</string>
    <string name="signup_nick">昵称</string>
    <string name="grkb_import_xnxq">导入学期</string>
    <string name="grkb_upload_teacher_hint">教师搜索现已改用官方教师展示平台，故该功能不建议开启</string>
    <string name="grkb_attention">请注意</string>
    <string name="grkb_attention_hint">导入后请务必核对教务网站上、学校发布的官方课表！</string>
    <string name="grkb_upload_teacher">帮助完善教师数据库</string>
    <string name="cjgl_xnxq">查询学期</string>
    <string name="bind_stun_title">验证哈工大深圳学号</string>
    <string name="bind_stun_stunum">学号</string>
    <string name="bind_stun_password">统一身份登录密码</string>
    <string name="add_task_title">添加待办</string>
    <string name="add_task_name_hint">输入任务名...</string>
    <string name="add_task_everyday">每日任务</string>
    <string name="add_task_limitation">任务期限</string>
    <string name="add_attitude_title">发布态度话题</string>
    <string name="add_attitude_name">输入标题</string>
    <string name="add_attitude_image">添加图片</string>
    <string name="hitsz">哈工大深圳</string>
    <string name="login_jwts_tysfrzdl">统一身份认证登录</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="hita_account">HITSZ助手</string>
    <string name="app_slogan">Harvest In The Shining Zone </string>
    <string name="navi_campus_card_p">校园卡</string>
    <string name="navi_jw_emptyclassroom_p">空教室查询</string>
    <string name="notif_importdatafirst">请先创建或导入课表！</string>
    <string name="timetable_tab_title">第%d周</string>
    <string name="logout_message">注销后，本地所有数据将会被清空</string>
    <string name="tt_monday">一</string>
    <string name="tt_tuesday">二</string>
    <string name="tt_wednesday">三</string>
    <string name="tt_thursday">四</string>
    <string name="tt_friday">五</string>
    <string name="settings_category_functions">功能开关</string>
    <string name="settings_summary_task">开启后方可使用学习助手</string>
    <string name="settings_title_task">任务模块(开发阶段)</string>
    <string name="settings_summary_autologin">需要验证学号并设置本地登录密码</string>
    <string name="settings_title_autologin">后台自动登录教务</string>
    <string name="settings_title_jwpassword">设置教务登录密码</string>
    <string name="settings_summary_jwpassword">出于隐私安全，密码不会保存在云</string>
    <string name="settings_title_darkmode">深色模式选项</string>
    <string name="settings_summary_darkmode">设置大可莫得开启时机</string>
    <string name="settings_category_timetable">课程表设置</string>
    <string name="settings_summary_colormode">为不同科目着色，关闭则显示主题渐变色</string>
    <string name="settings_title_colormode">启用科目颜色</string>
    <string name="settings_category_app">应用设置</string>
    <string name="settings_summary_auto_check_update">建议开启</string>
    <string name="settings_title_auto_check_update">进入app自动检查更新</string>
    <string name="settings_summary_auto_download_wifi">建议开启</string>
    <string name="settings_title_auto_download_wifi">Wifi自动下载更新</string>
    <string name="setting_summary_always_on_notifi">其实挺方便哒</string>
    <string name="setting_title_always_on_notifi">常驻通知栏</string>
    <string name="settings_category_auto_login">自动登录设置</string>
    <string name="theme_name_red">鲜艳红</string>
    <string name="theme_name_pink">爱人粉</string>
    <string name="theme_name_brown">低调棕</string>
    <string name="theme_name_blue">晴空蓝</string>
    <string name="theme_name_grey">谷歌灰</string>
    <string name="theme_name_android">安卓绿</string>
    <string name="theme_name_purple">直男紫</string>
    <string name="theme_name_green">原谅绿</string>
    <string name="theme_name_deep_orange">百香橙</string>
    <string name="theme_name_cyan">光亮青</string>
    <string name="theme_name_amber">琥珀</string>
    <string name="settings_summary_timetable_back">点击按钮快速回到本周</string>
    <string name="settings_title_timetable_back">显示“回到本周”浮动按钮</string>
    <string name="settings_title_timetable_card_height">事件卡片高度（像素/小时）</string>
    <string name="settings_summary_timetable_card_height">点击恢复默认</string>
    <string name="settings_title_timetable_card_opacity">卡片背景不透明度</string>
    <string name="settings_title_timetable_card_text_bold">卡片字体加粗</string>
    <string name="settings_summary_timetable_card_text_bold">有时挺好看的</string>
    <string name="settings_title_timetable_card_icon_enable">卡片显示小圆圈</string>
    <string name="settings_summary_timetable_card_icon_enable">关闭则文字上移</string>
    <string name="settings_title_timetable_card_title_gravity">标题对齐方式</string>
    <string name="settings_summary_timetable_card_title_gravity">仅设置事件名称的显示方式</string>
    <string name="settings_title_timetable_card_background">卡片背景</string>
    <string name="settings_title_timetable_card_title_color">卡片标题颜色</string>
    <string name="settings_title_timetable_card_subtitle_color">卡片副标题颜色</string>
    <string name="settings_title_timetable_card_title_alpha">标题不透明度</string>
    <string name="settings_title_timetable_card_subtitle_alpha">副标题不透明度</string>
    <string name="settings_title_timetable_preset">预设样式配置</string>
    <string name="settings_summary_timetable_preset">使用预设配置下面的选项</string>
    <string name="settings_title_timetable_card_icon_color">小圆圈颜色</string>
    <string name="community_name">θ社区</string>
</resources>