<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/drawer_nav_jwts"
        android:icon="@drawable/ic_menu_jwts"
        android:title="@string/main_drawer_menu_jwts" />
    <item
        android:id="@+id/drawer_nav_ut"
        android:icon="@drawable/ic_card"
        android:title="@string/main_drawer_menu_ut"
        android:visible="false" />

    <item
        android:id="@+id/drawer_nav_info"
        android:icon="@drawable/ic_menu_bulletin"
        android:title="@string/main_drawer_menu_info" />
    <item
        android:id="@+id/drawer_nav_hita"
        android:icon="@drawable/hita_face1"
        android:title="@string/main_drawer_menu_hita" />
    <item
        android:id="@+id/drawer_nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/main_drawer_menu_search"
        android:visible="false" />
    <item
        android:id="@+id/drawer_nav_community"
        android:icon="@drawable/ic_post"
        android:title="@string/community_name"
        android:visible="true" />
    <item
        android:id="@+id/drawer_nav_attitude"
        android:icon="@drawable/ic_thumbs_up_down"
        android:title="@string/navi_campus_vote_p"
        android:visible="true" />
    <item
        android:actionLayout="@layout/action_switch_darkmode"
        android:icon="@drawable/ic_moon"
        android:title="@string/main_drawer_menu_darkmode"
        android:visible="false" />
    <item
        android:id="@+id/drawer_nav_settings"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/main_drawer_menu_settings"
        android:visible="false" />
    <item
        android:id="@+id/drawer_nav_report"
        android:icon="@drawable/ic_bug_report"
        android:title="@string/main_drawer_menu_report" />
    <item
        android:id="@+id/drawer_nav_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/main_drawer_menu_about" />

    <!--<item android:title="@string/main_drawer_category_function"-->
    <!--    >-->
    <!--    <menu>-->

    <!--    </menu>-->
    <!--</item>-->

    <!--    <item android:title="@string/main_drawer_category_other">-->
    <!--        <menu>-->
    <!--         -->
    <!--        </menu>-->
    <!--    </item>-->
    <!--        &lt;!&ndash;<item android:title="高级操作" android:id="@+id/drawer_nav_control" />&ndash;&gt;-->

</menu>