<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:layout_width="match_parent"
        android:title="@string/settings_category_app">
        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="notification"
            android:summary="@string/setting_summary_always_on_notifi"
            android:textColor="?attr/text_color_primary"
            android:textColorHint="?attr/text_color_secondary"
            android:title="@string/setting_title_always_on_notifi" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="autoCheckUpdate"
            android:summary="@string/settings_summary_auto_check_update"
            android:textColor="?attr/text_color_primary"
            android:textColorHint="?attr/text_color_secondary"
            android:title="@string/settings_title_auto_check_update" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="autoDownloadInWifi"
            android:summary="@string/settings_summary_auto_download_wifi"
            android:textColor="?attr/text_color_primary"
            android:textColorHint="?attr/text_color_secondary"
            android:title="@string/settings_title_auto_download_wifi" />

    </PreferenceCategory>

</PreferenceScreen>
